--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
 
         <nav class="navbar">
 
@@ -66,10 +66,18 @@
 
         </nav>
 
-        <div>
-            <p></p>
-            <h1></h1>
-            <h2></h2>
+        <div class="container-header">
+            <p class="small-title paragraph">Make the right choice</p>
+            <h1 class="title">Too fast <br>
+                Too wild <br>
+                Too different
+                <p class="line"></p>
+            </h1>
+            <h2 class="subtitle">This is wrap, a creative digital company, creating solutions for any visual identity
+                project,
+                espetically for digital experiences and brand identities.
+                <a href="/">View our works</a>
+            </h2>
         </div>
     </header>
     <main>
@@ -81,3 +89,6 @@
 </body>
 
 </html>
+
+<!-- LINE
+SMall title -->
