--- a/html/index.html
+++ b/html/index.html
@@ -1,93 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS -->
+    <title>Wrap - Webpage</title>
+
+    <!-- CSS - MAIN MOBILE -->
     <link rel="stylesheet" href="../styles/main-mobile.css">
 
-    <!-- Font Family -->
+    <!-- FONT FAMILY -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700;900&display=swap"
         rel="stylesheet">
-
-    <title>Website - ISIL</title>
 </head>
 
 <body>
     <header id="header">
+        <div class="header-video">
+            <video src="../assets/bg.mp4" autoplay loop muted></video>
+        </div>
+        
+        <div class="header-overlay"></div>
 
-        <nav class="navbar">
+        <div class="header-content">
+            <nav class="navbar">
 
-            <div class="navbar-left">
-                <ul class="navbar-left-ul">
-                    <li>
-                        <a href="/">
-                            <img class="logo" src="http://blahlab.com/jekyll/wrap/assets/images/logo-3.png" alt="logo">
+                <div class="navbar-left">
+                    <ul class="navbar-left-ul">
+                        <li>
+                            <a href="/">
+                                <img class="logo" src="http://blahlab.com/jekyll/wrap/assets/images/logo-3.png" alt="logo">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+    
+                <div class="navbar-right">
+                    <ul class="navbar-right-ul">
+                        <li>
+                            <a class="" href="/">Home</a>
+                        </li>
+                        <li>
+                            <a href="/">About</a>
+                        </li>
+                        <li>
+                            <a href="/">Services</a>
+                        </li>
+                        <li>
+                            <a href="/">Works</a>
+                        </li>
+                        <li>
+                            <a href="/">Team</a>
+                        </li>
+                        <li>
+                            <a href="/">Blog</a>
+                        </li>
+                        <li>
+                            <a href="/">Contact</a>
+                        </li>
+                    </ul>
+                    <li class="navbar-menu">
+                        <a class="container-menu" href="/">
+                            <img class="menu" src="../assets/icons/menu-white.svg" alt="Menu">
+                            <p>Menu</p>
                         </a>
                     </li>
-                </ul>
+                </div>
+            </nav>
+
+            <div class="container-header">
+                <p class="small-title paragraph">Make the right choice</p>
+                <h1 class="title">Too fast <br>
+                    Too wild <br>
+                    Too different
+                    <p class="line"></p>
+                </h1>
+                <h2 class="subtitle">This is wrap, a creative digital company, creating solutions for any visual identity
+                    project,
+                    espetically for digital experiences and brand identities.
+                    <a href="/">View our works</a>
+                </h2>
             </div>
-
-            <div class="navbar-right">
-                <ul class="navbar-right-ul">
-                    <li>
-                        <a class="" href="/">Home</a>
-                    </li>
-                    <li>
-                        <a href="/">About</a>
-                    </li>
-                    <li>
-                        <a href="/">Services</a>
-                    </li>
-                    <li>
-                        <a href="/">Works</a>
-                    </li>
-                    <li>
-                        <a href="/">Team</a>
-                    </li>
-                    <li>
-                        <a href="/">Blog</a>
-                    </li>
-                    <li>
-                        <a href="/">Contact</a>
-                    </li>
-                </ul>
-                <li class="navbar-menu">
-                    <a class="container-menu" href="/">
-                        <img class="menu" src="../assets/icons/menu-white.svg" alt="Menu">
-                        <p>Menu</p>
-                    </a>
-                </li>
-            </div>
-
-        </nav>
-
-        <div class="container-header">
-            <p class="small-title paragraph">Make the right choice</p>
-            <h1 class="title">Too fast <br>
-                Too wild <br>
-                Too different
-                <p class="line"></p>
-            </h1>
-            <h2 class="subtitle">This is wrap, a creative digital company, creating solutions for any visual identity
-                project,
-                espetically for digital experiences and brand identities.
-                <a href="/">View our works</a>
-            </h2>
         </div>
     </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
 </body>
-
 </html>
 
 <!-- LINE
