First section complete

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +22,7 @@
         <div class="header-video">
             <video src="../assets/bg.mp4" autoplay loop muted></video>
         </div>
-        
+
         <div class="header-overlay"></div>
 
         <div class="header-content">
@@ -31,12 +32,13 @@
                     <ul class="navbar-left-ul">
                         <li>
                             <a href="/">
-                                <img class="logo" src="http://blahlab.com/jekyll/wrap/assets/images/logo-3.png" alt="logo">
+                                <img class="logo" src="http://blahlab.com/jekyll/wrap/assets/images/logo-3.png"
+                                    alt="logo">
                             </a>
                         </li>
                     </ul>
                 </div>
-    
+
                 <div class="navbar-right">
                     <ul class="navbar-right-ul">
                         <li>
@@ -77,7 +79,8 @@
                     Too different
                     <p class="line"></p>
                 </h1>
-                <h2 class="subtitle">This is wrap, a creative digital company, creating solutions for any visual identity
+                <h2 class="subtitle">This is wrap, a creative digital company, creating solutions for any visual
+                    identity
                     project,
                     espetically for digital experiences and brand identities.
                     <a href="/">View our works</a>
@@ -85,7 +88,40 @@
             </div>
         </div>
     </header>
+    <main id="main">
+        <section class="main-container">
+            <p class="small-title">Creative exeperience</p>
+            <p class="line"></p>
+            <h2 class="medium-title">Creating solutions <br> is what we do best. </h2>
+            <p class="text">We are creating solutions for any visual identity project, espetically for digital experiences and brand
+                identities.</p>
+            <img src="http://blahlab.com/jekyll/wrap/assets/images/logo-black.png" alt="Logo">
+        </section>
+        <!-- <section class="main-container">
+            <div class="main-second-container">
+                <div>
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <p></p>
+                <p></p>
+                <a href=""></a>
+            </div>
+
+        </section> -->
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
 
 <!-- LINE
