second section complete

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,9 @@
 
     <!-- CSS - MAIN MOBILE -->
     <link rel="stylesheet" href="../styles/main-mobile.css">
-
+    <!-- CSS - DESKTOP -->
+    <link rel="stylesheet" href="../styles/desktop.css" media="(min-width: 800px)">
+    
     <!-- FONT FAMILY -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -93,10 +95,28 @@
             <p class="small-title">Creative exeperience</p>
             <p class="line"></p>
             <h2 class="medium-title">Creating solutions <br> is what we do best. </h2>
-            <p class="text">We are creating solutions for any visual identity project, espetically for digital experiences and brand
+            <p class="text">We are creating solutions for any visual identity project, espetically for digital
+                experiences and brand
                 identities.</p>
             <img src="http://blahlab.com/jekyll/wrap/assets/images/logo-black.png" alt="Logo">
         </section>
+
+
+        <section class="main-second-container">
+            <div class="bg-img">
+                <div class="right-container">
+                    <h2>client focused</h2>
+                    <p class="line"></p>
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, adipisci ipsam temporibus
+                        possimus sed, earum hic aliquid eos commodi iure quo.</p>
+                    <p class="text"> Perferendis perspiciatis nisi sed expedita
+                        dicta, nihil aliquid cumque.</p>
+
+                    <button class="btn">Meat The Team</button>
+                </div>
+            </div>
+        </section>
+
         <!-- <section class="main-container">
             <div class="main-second-container">
                 <div>
