third section and footer(1/3) complete

--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../styles/main-mobile.css">
     <!-- CSS - DESKTOP -->
     <link rel="stylesheet" href="../styles/desktop.css" media="(min-width: 800px)">
-    
+
     <!-- FONT FAMILY -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
                     <ul class="navbar-left-ul">
                         <li>
                             <a href="/">
-                                <img class="logo" src="http://blahlab.com/jekyll/wrap/assets/images/logo-3.png"
+                                <img class="logo" src="../assets/icons/logo.png"
                                     alt="logo">
                             </a>
                         </li>
@@ -67,7 +67,7 @@
                     </ul>
                     <li class="navbar-menu">
                         <a class="container-menu" href="/">
-                            <img class="menu" src="../assets/icons/menu-white.svg" alt="Menu">
+                            <img class="menu" src="../assets/icons/menu.svg" alt="Menu">
                             <p>Menu</p>
                         </a>
                     </li>
@@ -91,14 +91,14 @@
         </div>
     </header>
     <main id="main">
-        <section class="main-container">
+        <section class="main-first-container main-container">
             <p class="small-title">Creative exeperience</p>
             <p class="line"></p>
             <h2 class="medium-title">Creating solutions <br> is what we do best. </h2>
             <p class="text">We are creating solutions for any visual identity project, espetically for digital
                 experiences and brand
                 identities.</p>
-            <img src="http://blahlab.com/jekyll/wrap/assets/images/logo-black.png" alt="Logo">
+            <img src="../assets/icons/logo-black.png" alt="Logo">
         </section>
 
 
@@ -107,7 +107,8 @@
                 <div class="right-container">
                     <h2>client focused</h2>
                     <p class="line"></p>
-                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, adipisci ipsam temporibus
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, adipisci ipsam
+                        temporibus
                         possimus sed, earum hic aliquid eos commodi iure quo.</p>
                     <p class="text"> Perferendis perspiciatis nisi sed expedita
                         dicta, nihil aliquid cumque.</p>
@@ -117,28 +118,93 @@
             </div>
         </section>
 
-        <!-- <section class="main-container">
-            <div class="main-second-container">
-                <div>
-                    <h3></h3>
-                    <p></p>
+        <section class="main-container main-third-container">
+            <p class="small-title">Main services</p>
+            <p class="line"></p>
+            <h2 class="medium-title">We transform <br> business</h2>
+
+            <div class="main-services">
+
+                <div class="main-services-container">
+                    <div>
+                        <img class="" src="../assets/icons/notification.png" alt="Design">
+                    </div>
+
+                    <h3>Design</h3>
+                    <p>Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam
+                        necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.</p>
                 </div>
-                <p></p>
-                <p></p>
-                <a href=""></a>
+
+                <div class="main-services-container">
+                    <div>
+                        <img class="" src="../assets/icons/light.png" alt="Art Direction">
+                    </div>
+
+                    <h3>Art Direction</h3>
+                    <p>Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam
+                        necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.</p>
+                </div>
+
+                <div class="main-services-container">
+                    <div>
+                        <img class="" src="../assets/icons/bookmark.svg" alt="Branding">
+                    </div>
+
+                    <h3>Branding</h3>
+                    <p>Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam
+                        necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.</p>
+                </div>
+
+                <div class="main-services-container">
+                    <div>
+                        <img class="" src="../assets/icons/heart.png" alt="Photography">
+                    </div>
+
+                    <h3>Photography</h3>
+                    <p>Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam
+                        necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.</p>
+                </div>
+
+                <div class="main-services-container">
+                    <div>
+                        <img class="" src="../assets/icons/flag.png" alt="Marketing">
+                    </div>
+
+                    <h3>Marketing</h3>
+                    <p>Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam
+                        necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.</p>
+                </div>
+
+                <div class="main-services-container">
+                    <div>
+                        <img class="" src="../assets/icons/message.png" alt="Support">
+                    </div>
+
+                    <h3>Support</h3>
+                    <p>Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam
+                        necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus.</p>
+                </div>
+
             </div>
-
-        </section> -->
-        <section>
-
         </section>
+
         <section>
 
         </section>
     </main>
 
-    <footer>
+    <footer id="footer">
+        <section class="footer-container">
 
+        </section>
+        <section class="footer-container">
+
+        </section>
+        <section class="footer-container footer-third-container">
+            <div>
+                <h3>©2017 Wrap theme. All rights reserved.</h3>
+            </div>
+        </section>
     </footer>
 </body>
 
