change of format.

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
 <body>
     <header id="header">
         <div class="header-video">
-            <video src="../assets/bg.mp4" autoplay loop muted></video>
+            <video src="../assets/bg.webm" autoplay loop muted></video>
         </div>
 
         <div class="header-overlay"></div>
@@ -34,7 +34,7 @@
                     <ul class="navbar-left-ul">
                         <li>
                             <a href="/">
-                                <img class="logo" src="../assets/icons/logo.png"
+                                <img class="logo" src="../assets/icons/logo.webp"
                                     alt="logo">
                             </a>
                         </li>
@@ -98,7 +98,7 @@
             <p class="text">We are creating solutions for any visual identity project, espetically for digital
                 experiences and brand
                 identities.</p>
-            <img src="../assets/icons/logo-black.png" alt="Logo">
+            <img src="../assets/icons/logo-black.webp" alt="Logo">
         </section>
 
 
@@ -127,7 +127,7 @@
 
                 <div class="main-services-container">
                     <div>
-                        <img class="" src="../assets/icons/notification.png" alt="Design">
+                        <img class="" src="../assets/icons/notification.webp" alt="Design">
                     </div>
 
                     <h3>Design</h3>
@@ -137,7 +137,7 @@
 
                 <div class="main-services-container">
                     <div>
-                        <img class="" src="../assets/icons/light.png" alt="Art Direction">
+                        <img class="" src="../assets/icons/light.webp" alt="Art Direction">
                     </div>
 
                     <h3>Art Direction</h3>
@@ -157,7 +157,7 @@
 
                 <div class="main-services-container">
                     <div>
-                        <img class="" src="../assets/icons/heart.png" alt="Photography">
+                        <img class="" src="../assets/icons/heart.webp" alt="Photography">
                     </div>
 
                     <h3>Photography</h3>
@@ -167,7 +167,7 @@
 
                 <div class="main-services-container">
                     <div>
-                        <img class="" src="../assets/icons/flag.png" alt="Marketing">
+                        <img class="" src="../assets/icons/flag.webp" alt="Marketing">
                     </div>
 
                     <h3>Marketing</h3>
@@ -177,7 +177,7 @@
 
                 <div class="main-services-container">
                     <div>
-                        <img class="" src="../assets/icons/message.png" alt="Support">
+                        <img class="" src="../assets/icons/message.webp" alt="Support">
                     </div>
 
                     <h3>Support</h3>
